--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.0",
-    "grunt-contrib-watch": "^1.1.0"
+    "grunt-contrib-watch": "^1.1.0",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3"
   }
 }
