--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
-/public/hot
-/public/storage
+/public/*
 /storage/*.key
 /vendor
 .env
@@ -14,3 +13,4 @@ yarn-error.log
 .env.example
 api_creds_stage.php
 api_creds_prod.php
+.nvmrc
