--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "7.2.*",
         "fideloper/proxy": "^4.0",
-        "mews/captcha": "1.0.1",
+        "mews/captcha": "2.2.*",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
