Restructure templates for reusability, add image lookup table

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         ],
         "files": [
             "app/ArchiveSpaceApi.php",
-            "api_creds_prod.php"
+            "api_creds_prod.php",
+            "app/ImageLookup.php"
         ]
     },
     "autoload-dev": {
