Update retrieving archival objects and mapping the response data

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "files": [
             "app/ArchiveSpaceApi.php",
             "api_creds_prod.php",
-            "app/ImageLookup.php"
+            "app/ImageLookup.php",
+            "app/Data.php"
         ]
     },
     "autoload-dev": {
